@@ -4104,6 +4104,7 @@ $_LANG['<!qs>customer name'] = 'nazwa klienta';
 $_LANG['<!qs>address'] = 'adres';
 $_LANG['<!qs>post name'] = 'nazwa korespondencyjna';
 $_LANG['<!qs>post address'] = 'adres korespondencyjny';
+$_LANG['<!qs>location name'] = 'nazwa lokalizacji';
 $_LANG['<!qs>location address'] = 'adres lokalizacyjny';
 $_LANG['<!qs>email'] = 'email';
 
